# antaris-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_MCP.md  ROADMAP.md  pyproject.toml
antaris_guard/: __init__.py  __main__mcp.py  audit.py  behavior.py  compliance.py  content.py  conversation.py  conversation_state.py  guard.py  locking.py  mcp_server.py  normalizer.py  patterns.py  policies.py  policy.py  rate_limit.py  reputation.py  utils.py
benchmarks/: bench_guard.py
tests/: test_conversation_guard.py  test_conversation_policies.py  test_evasion.py  test_guard.py  test_mcp_server.py  test_policy_composition.py
